# coreDS_Sample_SimpleDataReceiver

./: CMakeLists.txt  SimpleDataReceiver.cpp  readme.md
Script/: convertAngleFromDIS.lua  convertAngleToDIS.lua  convertLocation.lua  convertLocationFromDIS.lua  convertLocationFromHLA.lua  convertLocationToDIS.lua  convertLocationToHLA.lua
config/: DIS.json  HLA.json
